Update 1-Blog de Turismo/index 3.html
se agregan iconos en collection

--- a/1-Blog de Turismo/index 3.html
+++ b/1-Blog de Turismo/index 3.html
@@ -42,12 +42,13 @@
  
 <div class="row tip">
     <div class="s1 col tip left-sidebar">
-      <ul class="collection">
+      <ul class="collection center">
                     <li class="collection-item"><a href="#"><i class="fa fa-facebook" ></i></a></li>
                     <li class="collection-item"><a href="#"><i class="fa fa-pinterest"></i></a></li>
                     <li class="collection-item"><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     <li class="collection-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
                     <li class="collection-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="collection-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
                   </ul>
 <!--Aca van dos imagenes-->
     </div>
