Update 1-Blog de Turismo/index 3.html
iconos de redes solciales

--- a/1-Blog de Turismo/index 3.html
+++ b/1-Blog de Turismo/index 3.html
@@ -39,16 +39,16 @@
         </div>   
       </div>
     </div>
- 
+<!-- se insertan los iconos de redes  -->
 <div class="row tip">
     <div class="s1 col tip left-sidebar">
       <ul class="collection center">
-                    <li class="collection-item"><a href="#"><i class="fa fa-facebook" ></i></a></li>
-                    <li class="collection-item"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                    <li class="collection-item"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="collection-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="collection-item"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="collection-item"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="collection-may"><a href="#"><i class="fa fa-facebook" ></i></a></li>
+                    <li class="collection-may"><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                    <li class="collection-may"><a href="#"><i class="fa fa-google"></i></a></li>
+                    <li class="collection-may"><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li class="collection-may"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="collection-may"><a href="#"><i class="fa fa-instagram"></i></a></li>
                   </ul>
 <!--Aca van dos imagenes-->
     </div>
