Update 1-Blog de Turismo/index 3.html
estilos a imagenes, tamaños

--- a/1-Blog de Turismo/index 3.html
+++ b/1-Blog de Turismo/index 3.html
@@ -40,8 +40,8 @@
       </div>
     </div>
 <!-- se insertan los iconos de redes  -->
-<div class="row tip">
-    <div class="s1 col tip left-sidebar">
+<div class="row">
+    <div class="s1 col left-sidebar">
       <ul class="collection center">
                     <li class="collection-may"><a href="#"><i class="fa fa-facebook" ></i></a></li>
                     <li class="collection-may"><a href="#"><i class="fa fa-pinterest"></i></a></li>
@@ -50,17 +50,28 @@
                     <li class="collection-may"><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     <li class="collection-may"><a href="#"><i class="fa fa-instagram"></i></a></li>
                   </ul>
+    </div>
 <!--Aca van dos imagenes-->
-    </div>
     <div class="s3 col tip">
-      <p class="left slogan">"Columna de imagenes izquierda"</p>
+      <div>
+      <img src="img/bancosocial.PNG" alt="Logoredturismo" class="img-lat"/>
+      </div>
+      <div>
+      <img src="img/capuchinos.PNG" alt="Logoredturismo" class="img-lat"/>
+      </div>
     </div>
+<!-- Aca va una imagen central -->
     <div class="s5 col tip">
-      <p class="left slogan">"Columna de imagenes centrales"</p>
+      <img src="img/centrocultural.PNG" alt="Logoredturismo" class="img-cent"/>
     </div>
   <!--Aca van dos imagenes-->
     <div class="s3 col tip">
-      <p class="left slogan">"Columna de imagenes derechas"</p>
+      <div>
+      <img src="img/cascada.PNG" alt="Logoredturismo" class="img-lat"/>
+      </div>
+      <div>
+      <img src="img/loteriacordoba.PNG" alt="Logoredturismo" class="img-lat"/>
+      </div>
     </div>
 </div>
 
