--- a/1-Blog de Turismo/index 3.html
+++ b/1-Blog de Turismo/index 3.html
@@ -13,16 +13,16 @@
     <title>Mi Blog de Turismo</title>
   </head>
   <body>
-    <div class="row">
+    <div class="row blue lighten-3 ">
 
-      <div class="col s3 center tip">
-          <img src="img/logoMG.PNG" alt="Logoredturismo" class="logo"/>
+      <div class="col s3 center blue lighten-3 ">
+          <img src="img/logoMG.PNG" alt="Logoredturismo" class="logo right" />
       </div>
 
-      <div class="col s9 tip">
-        <div class="row tip">
-          <nav>
-            <div class="row tip">
+      <div class="col s9  ">
+        <div class="row  ">
+          <nav class="blue lighten-3 ">
+            <div class="row ">
                   <ul class="right hide-on-med-and-down">
                     <li class="active"><a href="#"><i class="material-icons left">dashboard</i>Inicio</a></li>
                     <li><a href="#"><i class="material-icons left">add_location</i>Estuve aqui</a></li>
@@ -34,8 +34,8 @@
           </nav>
         </div>
 
-        <div class="row tip slogan">
-          <p class="left slogan">"Conociendo el mundo a mi manera..."</p>
+        <div class=" slogan ">
+          <h3 class="left italic">"Conociendo el mundo a mi manera..."</h3>
         </div>   
       </div>
     </div>
@@ -43,34 +43,34 @@
 <div class="row">
     <div class="s1 col left-sidebar">
       <ul class="collection center">
-                    <li class="collection-may"><a href="#"><i class="fa fa-facebook" ></i></a></li>
-                    <li class="collection-may"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                    <li class="collection-may"><a href="#"><i class="fa fa-google"></i></a></li>
-                    <li class="collection-may"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li class="collection-may"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="collection-may"><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li class="collection-may"><a href="#" alt="facebook" title="Facebook"><i class="fa fa-facebook" ></i></a></li>
+                    <li class="collection-may"><a href="#" alt="pinterest" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
+                    <li class="collection-may"><a href="#" alt="Google" title="Google +"><i class="fa fa-google"></i></a></li>
+                    <li class="collection-may"><a href="#" alt="Twitter" title="twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li class="collection-may"><a href="#" alt="Linkedin" title="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="collection-may"><a href="#" alt="Instagram" title="instagram"><i class="fa fa-instagram"></i></a></li>
                   </ul>
     </div>
 <!--Aca van dos imagenes-->
-    <div class="s3 col tip">
+    <div class="s4 col ">
       <div>
-      <img src="img/bancosocial.PNG" alt="Logoredturismo" class="img-lat"/>
+      <img src="img/bancosocial.PNG" alt="Logoredturismo" class="img-lat z-depth-4"/>
       </div>
       <div>
-      <img src="img/capuchinos.PNG" alt="Logoredturismo" class="img-lat"/>
+      <img src="img/capuchinos.PNG" alt="Logoredturismo" class="img-lat z-depth-4"/>
       </div>
     </div>
 <!-- Aca va una imagen central -->
-    <div class="s5 col tip">
-      <img src="img/centrocultural.PNG" alt="Logoredturismo" class="img-cent"/>
+    <div class="s4 col ">
+      <img src="img/centrocultural.PNG" alt="Logoredturismo" class="img-cent z-depth-4"/>
     </div>
   <!--Aca van dos imagenes-->
-    <div class="s3 col tip">
+    <div class="s3 col ">
       <div>
-      <img src="img/cascada.PNG" alt="Logoredturismo" class="img-lat"/>
+      <img src="img/cascada.PNG" alt="Logoredturismo" class="img-lat z-depth-4"/>
       </div>
       <div>
-      <img src="img/loteriacordoba.PNG" alt="Logoredturismo" class="img-lat"/>
+      <img src="img/loteriacordoba.PNG" alt="Logoredturismo" class="img-lat z-depth-4"/>
       </div>
     </div>
 </div>
