Update 1-Blog de Turismo/index 3.html
se agregan entrada de blog

--- a/1-Blog de Turismo/index 3.html
+++ b/1-Blog de Turismo/index 3.html
@@ -8,14 +8,14 @@
     <!--Importar la hojas de estilos de materialize css-->
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-   <link href="css/customColors.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+   
     <link href="css/index.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <title>Mi Blog de Turismo</title>
   </head>
   <body>
     <div class="row blue lighten-3 ">
 
-      <div class="col s3 center blue lighten-3 ">
+      <div class="col s3 blue lighten-3 ">
           <img src="img/logoMG.PNG" alt="Logoredturismo" class="logo right" />
       </div>
 
@@ -32,10 +32,10 @@
                   </ul>
                 </div>
           </nav>
-        </div>
+        </div><br><br>
 
-        <div class=" slogan ">
-          <h3 class="left italic">"Conociendo el mundo a mi manera..."</h3>
+        <div class="">
+         <h3 class="left">"Conociendo el mundo a mi manera..."</h3>
         </div>   
       </div>
     </div>
@@ -75,17 +75,83 @@
     </div>
 </div>
 
+<!-- entrada de blog -->
 <div class="row tip">
-  <div class="s8 col tip">
-      <p class="left slogan">"Entrada de articulo"</p>
+
+  <div class="s8 col tip blue lighten-3">
+    <div class="row title">
+      <h4>Visitando paisajes nuestros</h4>
+    </div>
+    <div class="row">
+      <ul class="collection-item">
+            <li class="chip"><div class="chip">
+                <img src="img/iconoubicacion.png">
+                Cordoba,Argentina
+              </div></li>
+            <li class="chip"><div class="chip">
+                <img src="img/logocalendario.jpg">
+                Agosto, 2018
+              </div></li>
+      </ul>
+    </div>
+    <div class="row">
+      <div class="col s6">
+        <img src="img/santodomingo.PNG" alt="Logoredturismo" class="img-lat z-depth-4"/>
+      </div>  
+      <div class="col s6">
+        <p><span class="articulo1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p><br>
+        <blockquote><span>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </span></blockquote>
+      </div>      
+    </div>
+    <div class="card blue lighten-3">
+      <div class="col s1 center">
+        <i class="material-icons circle white medium">person</i>
+      </div>
+      <div class="col s10 center comenta black-text">
+        <textarea class=" black-text comenta" placeholder="Comenta esta nota..."></textarea>
+      </div>
+    <div>
   </div>
-   <div class="s4 col tip">
-      <p class="left slogan">"Info del auto"</p>
   </div>
 </div>
+
+<!-- informacion de autor -->
+
+   <div class="s4 col tip">
+      <p class="left slogan">"Info del autor"</p>
+  </div>
+</div>
+
+<!-- segunda entrada -->
 <div class="row tip">
-  <div class="s8 col tip">
-      <p class="left slogan">"Segunda entrada de publicacion"</p>
+  <div class="s8 col tip blue lighten-3">
+    <div class="row title">
+      <h4>Visitando paisajes nuestros</h4>
+    </div>
+    <div class="row">
+      <ul class="collection-item">
+            <li class="chip"><div class="chip">
+                <img src="img/iconoubicacion.png">
+                Cordoba,Argentina
+              </div></li>
+            <li class="chip"><div class="chip">
+                <img src="img/logocalendario.jpg">
+                Enero, 2017
+              </div></li>
+      </ul>
+    </div>
   </div>
 </div>
 
