Update 2-Blog de Gastronomia/home.html
se ocultan filas segun tamaño, responsive

--- a/2-Blog de Gastronomia/home.html
+++ b/2-Blog de Gastronomia/home.html
@@ -10,11 +10,11 @@
   <body>
     <div class="row main">
       <!-- primer fila -->
-      <div class="columns large-12 ">
-        <div class="row">
-          <div class="columns large-6">
+      <div class="columns large-12 hide-for-small-only ">
+        <div class="row hide-for-small-only ">
+          <div class="columns large-6 ">
             <div class="row">
-             <h1>La Cocina facil</h1>
+             <h1>La Cocina fácil</h1>
             </div>
             <div class="row align-right">
              <h4>Disfrutando la esencia...</h4>
@@ -30,7 +30,7 @@
       <div class="column large-12 ">
         <div class="row">
       <!-- columnas izquierda -->
-          <div class="column large-6 busca ">
+          <div class="column large-6 busca hide-for-small-only  ">
             <div class="blue">
             <div class="row">
               <div class="columns large-12 ">
@@ -67,18 +67,18 @@
                     <img src="img/milanapo.jpg" class="fav">
                   </div>
                   <div class="columns large-4 ">
-                    <img src="img/pasta.jpg" class="fav">
+                    <img src="img/tacos.jpg" class="fav">
                   </div>
                 </div>
                 <div class="row ">
                   <div class="columns large-4 ">
-                    <img src="img/pesce.jpg" class="fav">
-                  </div>
-                  <div class="columns large-4 ">
                     <img src="img/pizza.jpg" class="fav">
                   </div>
                   <div class="columns large-4 ">
-                    <img src="img/tacos.jpg" class="fav">
+                    <img src="img/pasta.jpg" class="fav">
+                  </div>
+                  <div class="columns large-4 ">
+                    <img src="img/pesce.jpg" class="fav">
                   </div>
                 </div>
               </div>
@@ -177,7 +177,7 @@
 <!-- segunda fila con columnas -->
       <div class="columns large-12 ">
         <div class="row">
-          <div class="columns large-6 ">
+          <div class="columns large-6 hide-for-small-only ">
              
           </div>
           <div class="columns large-6 busca">
@@ -206,24 +206,24 @@
 
           <div>
                 <div class="callout success ">
-                  <i class="fi-crown size-78" > WebRodrigo</i>
-                  <p><span class="com">Estoy de acuerdo con lo que escribis, pero me parece que no solo se come cuando hace frio. saludos
+                  <i class="fi-crown size-78" > Talentochef</i>
+                  <p><span class="com">Esta es una de mis especialidades...las hay de muchos tipos y sabores, cada region tiene la suya
                   </span></p>
                 </div>
               </div>
               <div class="callout success ">
-                <i class="fi-crown" > Ernet236</i>
-                <p><span class="com">SIIIIIII!!!!!!! lo mejor para comer, siempre en buena compañia!!! Muy buena tu pagina.</span></p>
+                <i class="fi-crown" > Secocina</i>
+                <p><span class="com">Excelente comentario!!!!!!!</span></p>
               </div>
               <div>
                 <div class="callout success ">
-                <img src="img/avatarhombre.jpg" style="width:5%">  Carlos32
-                <p><span class="com">16 horas de coccion!!!!!!!!!! esta loco ese!!! Desagree!!!!</span></p>
+                <img src="img/avatarhombre.jpg" style="width:5%">  Mati56
+                <p><span class="com">Esta buena la nota...suban recetas!!!!!!!YA!!!!!</span></p>
               </div>
               <div >
                 <div class="callout success ">
-                <img src="img/avatarmujer.jpg" style="width:5%"> MariaDev
-                 <p><span class="com">Con esa foto ya se me hizo agua a la boca!!!! a buscar carne</span></p>
+                <img src="img/avatarmujer.jpg" style="width:5%"> Este_mono
+                 <p><span class="com">Esa foto da hambre!!!! jajajajaja</span></p>
               </div>
           </div>
         </div>
