--- a/3-Blog de Musica/index.html
+++ b/3-Blog de Musica/index.html
@@ -15,17 +15,21 @@
       <div class="row">
         <nav class='navbar navbar-inverse navbar-fixed-top affix-top'>
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
               <img class="logo-img img-responsive left-block" src="img/logoblog.png" >
             </div>
-            <div class="col-lg-4 col-lg-offset-4 ">
+
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 col-lg-offset-4 col-md-offset-4 hidden-sm hidden-xs">
               <div class='row red-social'>
-                <img class='img-rounded img-social responsive ' src='img/fb.png'/>
-                <img class='img-rounded img-social' src='img/ig.png'/>
-                <img class='img-rounded img-social' src='img/tt.png'/>
+                <img class='img-rounded img-social responsive ' src='img//redsocial/facebook.png'/>
+                <img class='img-rounded img-social responsive ' src='img//redsocial/gorjeo.png'/>
+                <img class='img-rounded img-social' src='img/redsocial/instagram.png'/>
+                <img class='img-rounded img-social' src='img/redsocial/linkedin.png'/>
+                <img class='img-rounded img-social' src='img/redsocial/pinterest.png'/>
+                <img class='img-rounded img-social responsive ' src='img//redsocial/youtube.png'/>
               </div>
-              
             </div>
+
           </div>
         </nav>
       </div>
@@ -82,7 +86,7 @@
 
               </div>
               <div class="col-lg-6" >
-                <img class='img-rounded img-publi' src='img/fiestamusica.png'/>
+                <img class='img-thumbnail img-publi' src='img/fiestamusica.png'/>
               </div>
               <div class="col-lg-12 comentario ">
                 <form class="form-inline">
@@ -102,7 +106,7 @@
               
             <div class="col-lg-12 tip publicacion">
               <div class="col-lg-6" >
-                <img class='img-rounded img-publi' src='img/grupontvg.jpg'/>
+                <img class='img-thumbnail img-publi' src='img/grupontvg.jpg'/>
               </div>
               <div class="col-lg-6">
                 <h3>Nota exclusiva NTVG</h3>
@@ -128,7 +132,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 ">
+        <div class="col-lg-4  hidden-xs">
           <div class="row base">
             <div class="col-lg-12 tip buscador ">
               <form class="form-inline">
